changed add and remove buttons and added reset button

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ body {
 
 /***************** Buttons *************************/
 
+.btn-small {
+  width: 34px;
+  height: 34px;
+}
+
 .btn-blue {
     color: #fff;
     background-color: #0000bb;
